fixed z-index issue with search

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,7 +65,7 @@ nav {
     color: white;
     position: absolute;
     gap: 40px;
-    z-index: 3;
+    z-index: 2;
 }
 
 #mobile_search div {
@@ -330,6 +330,7 @@ main {
 .article_card img {
     height: 100%;
     max-height: 250px;
+    z-index: 1;
 }
 
 #article_pages {
